--- a/scss/style.scss
+++ b/scss/style.scss
@@ -535,27 +535,36 @@
             font-weight: normal;
             line-height: 20px;
             color: #282327;
-            //border: 1px solid black;
+            border: 1px solid #F7F9FB;
             border-radius: 5px;
-            width: 280px;
-            height: 65px;
+            width: 300px;
+            height: 55px;
             background: #F7F9FB;
             opacity: 100%;
             position: absolute;
             top: 73px;
-            left: -15%;
+            left: -23%;
             margin: 0 0 0 0;
             padding: 2px 0 0 0;
             .wallet__titlecont {
                //border: 1px solid red;
                display: flex;
-               width: 280px;
+               width: 300px;
                //justify-content: space-around;
                .wallet__title {
                   //border: 1px solid red;
-                  max-width: 260px;
+                  max-width: 290px;
                   flex: 0 1 auto;
-                  margin: 3px 0 0 3px;
+                  margin: 0 0 0 3px;
+                  .wallet__copybtn {
+                     display: inline-block;
+                     min-width: 120px;
+                     max-width: 130px;
+                     color:#46b1f0;
+                     //align-self: center;
+                     //padding: 0 0 0 5px;
+                     //border: 1px solid red;
+                  }
                   .linkw {
                      display: inline;
                      color: red;
@@ -571,15 +580,10 @@
                margin: 5px 0 0 9px;
                //padding: 0 12px 0 0;
                flex: 1 0 auto;
-               background: url(..//img/icons/closeicon1.png) -3px 1px/ cover no-repeat;
+               background: url(..//img/icons/closeicon1.png) -4px 1px/ cover no-repeat;
                }
             }
-            .wallet__copybtn {
-               width: 200px;
-               color:#46b1f0;
-               //align-self: center;
-               padding: 0 0 0 63px;
-            }
+
          }
       }
    }
