--- a/scss/style.scss
+++ b/scss/style.scss
@@ -167,11 +167,12 @@ body {
 .categories {
    display: grid;
    grid-template: minmax(160px, 1fr) / repeat(2, minmax(120px, 1fr));
-   //margin: 50px 0 0 0;
+   //margin: 50px 0 1% 0;
    .category {
       border-right: 2px dashed #acafb3;
       display: flex;
       flex-direction: column;
+      margin: 0 0 5px 0;
       .category__img {
          max-width: 100%;
          height: 100px;
@@ -611,7 +612,8 @@ body {
 //winnig addres
    .address__input {
       display: none;
-      justify-content: space-evenly;
+      //justify-content: center;
+      //align-items: center;
       //border: 1px solid #acafb3;
       border-radius: 3px;
       margin: 40% auto;
@@ -624,6 +626,7 @@ body {
          flex: 0 1 auto;
          border: 1px solid #acafb3;
          height: 20px;
+         margin: 3px 0 0 5%;
       }
       .adress__btn{
          display: inline-block;
@@ -635,6 +638,15 @@ body {
          color: #282327;
          height: 20px;
          border-radius: 3px;
+      }
+      .ref__area {
+         //border: 3px solid green;
+         max-width: 165px;
+         flex: 0 1 auto;
+         border: 1px solid #acafb3;
+         height: 20px;
+         color: red;
+         margin: 5px 25%;
       }
    }
 
@@ -729,4 +741,74 @@ body {
    .boofer {
       display: none;
    }
+}
+
+
+
+
+.rules__contentwrapper {
+   background: #F7F9FB;
+   .rules__wrapper{
+      .rules__title {
+         font-family: 'Inter';
+         text-align: left;
+         font-size: 16px;
+         font-weight: 600;
+         line-height: 18px;
+         color:#232328;
+         margin: 0 0 10px 0;
+      }
+      .rules__content {
+         font-family: 'Inter';
+         text-align: left;
+         font-size: 14px;
+         line-height: 18px;
+         color:#232328;
+         margin: 0 0 8px 0;
+         padding: 0 0 8px 0;
+         border-bottom: 1px dashed #acafb3;
+      }
+      .progress {
+         color: red;
+         font-weight: 500;
+      }
+      ul {
+         li:nth-child(1) {
+            padding: 5px 0 0 5px;
+            &::before {
+               content: "";
+               background: url(..//img/icons/diamond.png) 0 2px/15px no-repeat;
+               padding: 0 0 0 20px;
+            }
+         }
+         li:nth-child(2) {
+            padding: 5px 0 0 5px;
+            &::before {
+               content: "";
+               background: url(..//img/icons/diamond.png) 0 2px/15px no-repeat, url(..//img/icons/diamond.png) 17px 2px/15px no-repeat;
+               padding: 0 0 0 40px;
+            }
+         }
+         li:nth-child(3) {
+            padding: 5px 0 0 5px;
+            &::before {
+               content: "";
+               background: url(..//img/icons/diamond.png) 0 2px/15px no-repeat, url(..//img/icons/diamond.png) 17px 2px/15px no-repeat, url(..//img/icons/diamond.png) 34px 2px/15px no-repeat;
+               padding: 0 0 0 55px;
+            }
+         }
+      }
+      a {
+         font-family: 'Inter';
+         text-align: left;
+         font-size: 15px;
+         line-height: 20px;
+         color:#46b1f0;
+         text-decoration: underline;
+      }
+      img {
+         width: 20px;
+         height: 20px;
+      }
+}
 }
