--- a/css/style.css
+++ b/css/style.css
@@ -841,6 +841,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .rules__contentwrapper {
   background: #F7F9FB;
+  margin: 0 0 0 2px;
 }
 .rules__contentwrapper .rules__wrapper .rules__title {
   font-family: "Inter";
