--- a/TOL/scss/style.scss
+++ b/TOL/scss/style.scss
@@ -748,6 +748,7 @@ body {
 
 .rules__contentwrapper {
    background: #F7F9FB;
+   margin: 0 0 0 2px;
    .rules__wrapper{
       .rules__title {
          font-family: 'Inter';
