--- a/scss/style.scss
+++ b/scss/style.scss
@@ -341,6 +341,18 @@ body {
          box-shadow: 1px 1px 1px #acafb3;
       }
    }
+   .sold {
+      opacity: 40%;
+   }
+      .sold__item {
+         background: url(..//img/icons/sold1.png) 0 0/ cover no-repeat;
+         position: absolute;
+         right: 20px;
+         width: 100px;
+         height: 39px;
+         display: block;
+         opacity: 60%;
+      }
    .itemchecked {
       border-radius: 5px;
       position: absolute;
